<resources>
    <string name="app_name">Bar Booking</string>
    <string name="button_enter">Enter</string>
    <string name="login_string">Phone Number</string>
    <string name="password_string">Password</string>
    <string name="forgot_enter_data_1">Forgot your login details?</string>
    <string name="forgot_enter_data_2">Help with logging in</string>
    <string name="register_1">Don\'t have an account yet?</string>
    <string name="register_2">Registration</string>
    <string name="register_3">Register</string>
    <string name="already_register_1">Already have an account?</string>
    <string name="already_register_2">Log in to the system</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="repeat_password">Repeat password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password change</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="example">Example</string>
    <string name="return_b">Return</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change password</string>
    <string name="exit">Exit</string>
    <string name="password_changed">Password has been successfully changed</string>
    <string name="bar_name_1">АРКА</string>
    <string name="bar_name_2">History Club</string>
    <string name="bar_name_3">Gitano</string>
    <string name="bar_name_4">Route 148</string>
    <string name="bar_name_5">Nebar 2.0</string>
    <string name="adr_1">Большая Конюшенная ул, 27</string>
    <string name="adr_2">Конюшенная площадь, 2В</string>
    <string name="adr_3">Садовая улица, д. 12</string>
    <string name="adr_4">пр. Лиговский, д. 289</string>
    <string name="adr_5">ул. Ломоносова, д. 1</string>
    <string name="time_1">Сегодня до 02:00</string>
    <string name="time_2">Сегодня закрыто</string>
    <string name="time_3">Сегодня до 05:00</string>
    <string name="time_4">Круглосуточно</string>
    <string name="time_5">Сегодня до 06:00</string>
    <string name="book">Забронировать</string>
    <string name="bar_rating">Рейтинг: 4,95</string>
    <string name="bar_category">Категория: Танцпол, Винный Бар, Премиум</string>
    <string name="bar_kitchen">Кухня: Паназиатская, Авторская</string>
    <string name="bar_description">Описание: стильный бар-ресторан, в концепции которого выражаются три грани целого - bar, food, space</string>
    <string name="bar_phone">Телефон: +7 (812) 612–91-40</string>
    <string name="booking_info">Ресторан Арка по адресу Большая Конюшенная, ул. 27</string>
    <string name="count_person">Количество персон</string>
    <string name="book_date">Дата брони</string>
    <string name="book_time">Время брони</string>
    <string name="wish">Пожелание</string>
    <string name="accept_book">Подтвердить бронь</string>
    <string name="example_name">Василий Петров</string>
    <string name="example_phone">+7 (980) 777-55-35</string>
</resources>