<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/constraintLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/gradient_list"
  tools:context=".MainActivity">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0">

    <ImageView
      android:id="@+id/bar_logo"
      android:layout_width="175dp"
      android:layout_height="182dp"
      android:layout_marginTop="40dp"
      android:scaleType="fitCenter"
      app:srcCompat="@drawable/pub" />

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/text_input_register_name"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      android:layout_width="270dp"
      android:layout_height="55dp"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="8dp"
      android:gravity="center_vertical"
      android:hint="@string/name">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_edit_register_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/text_input_register_surname"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      android:layout_width="270dp"
      android:layout_height="55dp"
      android:layout_marginBottom="8dp"
      android:gravity="center_vertical"
      android:hint="@string/surname">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_edit_register_surname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/text_input_register_login"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      android:layout_width="270dp"
      android:layout_height="55dp"
      android:layout_marginBottom="8dp"
      android:gravity="center_vertical"
      android:hint="@string/login_string">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_edit_register_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/text_input_register_password"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      android:layout_width="270dp"
      android:layout_height="55dp"
      android:layout_marginBottom="8dp"
      app:endIconMode="password_toggle"
      android:gravity="center_vertical"
      android:hint="@string/password_string">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_edit_register_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/text_input_register_repeat_password"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
      android:layout_width="270dp"
      android:layout_height="55dp"
      android:layout_marginBottom="8dp"
      app:endIconMode="password_toggle"
      android:gravity="center_vertical"
      android:hint="@string/repeat_password">

      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text_input_edit_register_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="#000000"
        android:textColorHint="@color/black"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
      android:id="@+id/enter_button_1"
      android:layout_width="270dp"
      android:layout_height="55dp"
      android:backgroundTint="@color/background_enter_button"
      android:text="@string/register_3"
      android:textColor="@color/button_text_color"></Button>

    <View
      android:layout_width="match_parent"
      android:layout_height="1sp"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp"
      android:background="@color/black" />

    <TextView
      android:id="@+id/register_text_1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/already_register_1"
      android:textSize="16sp" />

    <TextView
      android:id="@+id/register_text_2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/already_register_2"
      android:textSize="16sp"
      android:textStyle="bold" />

  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>