<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_main_1"
    tools:context=".Personal_Account_Activity">

    <ImageView
        android:id="@+id/personal_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/white_rounded_corners"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personal_logo">

        <GridLayout
            android:id="@+id/GridLayout"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_gravity="center"
            android:columnCount="2">

          <TextView
            android:id="@+id/personal_name_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="15dp"
            android:text="@string/name"
            android:textSize="17sp"
            android:textStyle="bold" />

          <TextView
            android:id="@+id/personal_name_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="15dp"
            android:textSize="16sp" />

            <TextView
              android:id="@+id/personal_surname_1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="15dp"
              android:layout_marginTop="35dp"
              android:layout_marginEnd="15dp"
              android:text="@string/surname"
              android:textStyle="bold"
              android:textSize="17sp" />

          <TextView
            android:id="@+id/personal_surname_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="15dp"
            android:textSize="16sp" />

            <TextView
              android:id="@+id/personal_phone_1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="15dp"
              android:layout_marginEnd="15dp"
              android:layout_marginTop="35dp"
              android:text="@string/login_string"
              android:textStyle="bold"
              android:textSize="17sp" />

          <TextView
            android:id="@+id/personal_phone_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="15dp"
            android:textSize="16sp" />

        </GridLayout>

      <TextView
        android:id="@+id/personal_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/personal_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/personal_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/exit"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>