<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/dull_green_1"
  tools:context=".BookingActivity">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/input_wish"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
    android:layout_width="match_parent"
    android:layout_height="45dp"
    android:layout_marginStart="35dp"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="35dp"
    android:gravity="center_vertical"
    app:boxCornerRadiusBottomEnd="36dp"
    app:boxCornerRadiusBottomStart="36dp"
    app:boxCornerRadiusTopEnd="36dp"
    app:boxCornerRadiusTopStart="36dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView7">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edit_wish"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:imeOptions="actionDone"
      android:inputType="text"
      android:maxLines="1"
      android:textColor="#000000" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/input_book_time"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
    android:layout_width="170dp"
    android:layout_height="45dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="35dp"
    android:gravity="center_vertical"
    app:boxCornerRadiusBottomEnd="36dp"
    app:boxCornerRadiusBottomStart="36dp"
    app:boxCornerRadiusTopEnd="36dp"
    app:boxCornerRadiusTopStart="36dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/input_book_date">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edit_book_time"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:imeOptions="actionDone"
      android:inputType="time"
      android:maxLines="1"
      android:textColor="#000000"
      android:textSize="14sp" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/input_book_date"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
    android:layout_width="170dp"
    android:layout_height="45dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="35dp"
    android:gravity="center_vertical"
    app:boxCornerRadiusBottomEnd="36dp"
    app:boxCornerRadiusBottomStart="36dp"
    app:boxCornerRadiusTopEnd="36dp"
    app:boxCornerRadiusTopStart="36dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/input_person_count">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edit_book_date"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:imeOptions="actionDone"
      android:inputType="date"
      android:maxLines="1"
      android:textColor="#000000"
      android:textSize="14sp" />

  </com.google.android.material.textfield.TextInputLayout>

  <TextView
    android:id="@+id/person_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="35dp"
    android:layout_marginTop="50dp"
    android:text="@string/example_name"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/person_phone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="35dp"
    android:layout_marginTop="30dp"
    android:text="@string/example_phone"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/person_name" />

  <TextView
    android:id="@+id/desc_book"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="35dp"
    android:layout_marginTop="30dp"
    android:layout_marginEnd="35dp"
    android:maxLines="3"
    android:text="@string/booking_info"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/person_phone" />

  <TextView
    android:id="@+id/person_count"
    android:layout_width="wrap_content"
    android:layout_height="45dp"
    android:layout_marginStart="35dp"
    android:layout_marginTop="30dp"
    android:text="@string/count_person"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/desc_book" />

  <TextView
    android:id="@+id/book_date"
    android:layout_width="wrap_content"
    android:layout_height="45dp"
    android:layout_marginStart="35dp"
    android:layout_marginTop="30dp"
    android:text="@string/book_date"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/person_count" />

  <TextView
    android:id="@+id/textView6"
    android:layout_width="wrap_content"
    android:layout_height="45dp"
    android:layout_marginStart="35dp"
    android:layout_marginTop="30dp"
    android:text="@string/book_time"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/book_date" />

  <TextView
    android:id="@+id/textView7"
    android:layout_width="wrap_content"
    android:layout_height="45dp"
    android:layout_marginStart="35dp"
    android:layout_marginTop="30dp"
    android:text="@string/wish"
    android:textSize="16sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView6" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/input_person_count"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
    android:layout_width="100dp"
    android:layout_height="45dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="35dp"
    android:gravity="center_vertical"
    app:boxCornerRadiusBottomEnd="36dp"
    app:boxCornerRadiusBottomStart="36dp"
    app:boxCornerRadiusTopEnd="36dp"
    app:boxCornerRadiusTopStart="36dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/desc_book">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edit_person_count"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:imeOptions="actionDone"
      android:inputType="number"
      android:maxLines="1"
      android:textColor="#000000"
      android:textSize="14sp" />

  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/accept_book"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="35dp"
    android:layout_marginTop="50dp"
    android:layout_marginEnd="35dp"
    android:text="@string/accept_book"
    android:textColor="@color/button_personal_data_color"
    app:boxCornerRadiusBottomEnd="36dp"
    app:boxCornerRadiusBottomStart="36dp"
    app:boxCornerRadiusTopEnd="36dp"
    app:boxCornerRadiusTopStart="36dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/input_wish"
    app:strokeColor="@color/button_personal_data_color"
    app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>